# kinectFusionColor

./: CMakeLists.txt  main.cpp
